FS#4716: Fix MultiplePopup list rendering behind menu bar

--- a/Public/Support/Components/MultiplePopup/MultiplePopup.css
+++ b/Public/Support/Components/MultiplePopup/MultiplePopup.css
@@ -1,7 +1,7 @@
 
 .wfMultiplePopupList {
 	position: absolute;
-	z-index: 7;
+	z-index: 42;
 	background-color: white;
 	border: 1px solid #999;
 	padding: 0px;
